delay.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: ratings-delay-abort-vs
spec:
  hosts:
  - ratings
  http:
  - fault:
      delay:
        fixedDelay: 7s
        percentage:
          value: 100
    route:
    - destination:
        host: ratings
        subset: ratings-delay-abort-dr-subset-v1
  - route:
    - destination:
        host: ratings
        subset: ratings-delay-abort-dr-subset-v1
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: ratings-delay-abort-dr
spec:
  host: ratings
  subsets:
  - name: ratings-delay-abort-dr-subset-v1
    labels:
      version: v1
