service_entry.yaml
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: www.googleapis.com
spec:
  hosts:
    - www.googleapis.com
  ports:
    - number: 80
      name: http-port
      protocol: HTTP
    - number: 443
      name: http-port-for-tls-origination
      protocol: HTTP
  resolution: DNS
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: www.googleapis.com
spec:
  hosts:
    - www.googleapis.com
  http:
    - match:
        - port: 80
      route:
        - destination:
            host: www.googleapis.com
            port:
              number: 443
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: www.googleapis.com
spec:
  host: www.googleapis.com
  trafficPolicy:
    loadBalancer:
      simple: ROUND_ROBIN
    portLevelSettings:
      - port:
          number: 443
        tls:
          mode: SIMPLE # initiates HTTPS when accessing www.googleapis.com
"""
